# claude-block

./: .gitattributes  .gitignore  CLAUDE.md  GitVersion.yml  README.md  package.json  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  e2e.yml  test.yml  version.yml
hooks/: check-jq.sh  hooks.json  protect-directories.cmd  protect-directories.mjs  protect-directories.sh  protect_directories.py  run-hook.cmd  session-start.mjs  subagent_tracker.py
opencode/: index.ts  package.json
skills/claude-block/: SKILL.md
tests/: __init__.py  check-jq.bats  conftest.py  protect-directories.bats  protect-directories.test.mjs  run-tests.sh  session-start.test.mjs  test_agent_rules.py  test_allowed_patterns.py  test_bash_commands.py  test_basic_protection.py  test_blocked_patterns.py  test_child_dir_blocks.py  test_edge_cases.py  test_guide_messages.py  test_helper.bash  test_hook_integration.py  test_invalid_config.py  test_local_config.py  test_marker_file_protection.py  test_subagent_tracker.py  test_tool_types.py  test_wildcards.py
